made multiple themes

--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
                             <option value="1200">Slow (1.2 seconds)</option>
                         </select>
                     </div>
+
+                    <div class="setting-group">
+                        <label for="themeSelect">Theme</label>
+                        <select id="themeSelect">
+                            <option value="monkeytype" selected>Monkeytype</option>
+                            <option value="light">Light</option>
+                            <option value="dark-blue">Dark Blue</option>
+                            <option value="dracula">Dracula</option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
